- New convenience function 'check_number_format' with simple syntax for
  specifying layout of numbers that are stored as character.
- New functions to check (non)existens of a given set of key combinations:
  'contains_exactly', 'contains_at_least', 'contains_at_most', 'does_not_contain'.
  Support for globbing and regular expression is built in, and tests can be
  performed group-wise.
- Fix: option 'lin.ineq.eps' was ignored by 'confront'.
- Breaking change: for consistency, the '...' argument in 'exists_one' and 'exists_any'
  is replaced with 'by'. This only affects cases with multiple grouping variables.


version 0.9.3
- New functions 'exists_any' and 'exists_one' to help define cross-record 
  validation rules (thanks to David Salgado)
- results of 'sort' and 'aggregate' now include key columns (if any)
- Added accepted JSS paper as vignette.
- Added CITATION file

version 0.9.2
- fixed CRAN issue: plots generated during tests would end up under inst/tinytest
  which is against CRAN policy. (Thanks to Kurt Hornik).

version 0.9.1
- Fixed nonstandard URL caught on CRAN
- Added ORCID, link to book in DESCRIPTION

version 0.9.0
- 'confront' now accepts a vector of 'key's (thanks to Luca Gramaglia for
   suggesting)
- new function 'run_validation_file' runs an R script while capturing output
  of 'confront' calls.
- Objects inheriting from 'confrontation' now store event metadata. See ?event.
- Objects of class 'validator' now store (default) metadata on expression 
  language and rule severity.
- Reference data passed to 'confront' can now be of any type (not just data.frame).
  This breaks code where both 'ref' and 'key' were submitted and reference data is
  expected to be matched with data under scrutiny.
- new helper functions: 'is_unique', 'all_unique', 'is_complete', 'all_complete'
- 'lbj_cells' object now has an (experimental) $plot() method.
- 'lbj_cells' and 'lbj_rules' have new slot 'label', to comply to 'lumberjack' update.