@@ -29,6 +29,7 @@ export(as.data.frame)
 export(as_yaml)
 export(cells)
 export(check_field_length)
+export(check_format)
 export(check_number_format)
 export(check_part_whole_relation)
 export(check_that)
