@@ -320,8 +320,8 @@ linear_call <- function(x){
 
 validating_call <- function(cl){
   pure <- c("<", "<=", "==", "!=", ">=", ">", "%in%", "%vin%", "identical", "~" ,"%->%"
-          , "grepl" , "is_unique", "all_unique", "is_complete", "all_complete"
-          , "exists_any", "exists_one", "is_linear_sequence","in_linear_sequence" 
+          , "grepl" , "is_unique", "all_unique", "is_complete", "all_complete", "check_format"
+          , "exists_any", "exists_one", "is_linear_sequence","in_linear_sequence", 
           , "check_part_whole_relation", "check_field_length", "check_number_format"
           , "contains_exactly", "contains_at_least", "contains_at_most", "does_not_contain"
           , "in_range"
